	PR c++/54046 	* Makefile.in (gimple-low.o): Depend on langhooks.h. 	* gimple-low.c: Include langhooks.c. 	(block_may_fallthru): Handle TARGET_EXPR and ERROR_MARK, 	by default call lang_hooks.block_may_fallthru. 	* langhooks.h (struct lang_hooks): Add block_may_fallthru 	langhook. 	* langhooks-def.h (LANG_HOOKS_BLOCK_MAY_FALLTHRU): Define. 	(LANG_HOOKS_INITIALIZER): Use it.

* cp-objcp-common.h (LANG_HOOKS_BLOCK_MAY_FALLTHRU): Redefine.
	* cp-objcp-common.c (cxx_block_may_fallthru): New function.
	* cp-tree.h (cxx_block_may_fallthru): New prototype.

	* g++.dg/warn/Wreturn-type-8.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@193762 138bc75d-0d04-0410-961f-82ee72b054a4