gcc/langhooks.h
@@ -1,6 +1,6 @@
 /* The lang_hooks data structure.
    Copyright 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010,
-   2011 Free Software Foundation, Inc.
+   2011, 2012 Free Software Foundation, Inc.
 
 This file is part of GCC.
 
@@ -455,6 +455,10 @@ struct lang_hooks
      `std::terminate', so the C++ version of this function returns a
      FUNCTION_DECL for `std::terminate'.  */
   tree (*eh_protect_cleanup_actions) (void);
+
+  /* Return true if a stmt can fallthru.  Used by block_may_fallthru
+     to possibly handle language trees.  */
+  bool (*block_may_fallthru) (const_tree);
 
   /* True if this language uses __cxa_end_cleanup when the ARM EABI
      is enabled.  */
